[tool.poetry]
name = "calculate_distance"
version = "1.0.0"
description = "A FastAPI application that calculates the distance between multiple locations"
authors = ["andreserb@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.4"
pydantic = "^1.9.0"
uvicorn = "^0.32.0"
sqlite3 = "^3.37.0"
pika = "^1.3.2"
structlog = "^24.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"